--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "php-open-source-saver/jwt-auth": "^1.4",
+        "spatie/laravel-permission": "^5.5",
         "spatie/laravel-translatable": "^6.0"
     },
     "require-dev": {
