--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.12.1",
-        "pusher-js": "^7.2.0"
+        "pusher-js": "^7.2.0",
+        "swagger-ui": "^4.13.2"
     }
 }
