--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0d2bc6d821fbabe7e2600c079fef72db",
+    "/js/swagger.js": "/js/swagger.js?id=0a33415308835223bc32bc8d14f8f963",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940"
 }
