--- a/public/api.yaml
+++ b/public/api.yaml
@@ -60,8 +60,10 @@ paths:
               properties:
                 username:
                   type: string
+                  default: miqelanjelo
                 email:
                   type: string
+                  default: santaclaus@gmail.com
                 password:
                   type: string
                 password_confirmation:
@@ -108,6 +110,7 @@ paths:
               properties:
                 email:
                   type: string
+                  default: somerandom@gmail.com
   /reset-password/{token}:
     post:
       summary: Reset user's password.
@@ -130,6 +133,7 @@ paths:
               properties:
                 email:
                   type: string
+                  default: testemail@gmail.com
                 password:
                   type: string
                 token:
